Fix various issue to make it easier to deploy eks-stack and connect to it from local kafka client